feat(user-search): search by name with improved UX and metadata handling
- Redesign user list tile to match profile switcher pattern (medium avatar,
  middle-ellipsis npub, consistent padding)
- Sort follows: users with metadata alphabetically first, then without
- Periodically refresh follows to pick up background metadata updates
- Batch name search stream updates (300ms) to reduce list jerkiness
- Add loading spinner in search field during active name search
- Sanitize malformed UTF-16 in metadata (surrogate pairs + UTF-8 round-trip)
- Pass metadata to start chat screen for instant display
- Truncate long about text to 10 lines in user profile card

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -98,6 +98,7 @@
   "startNewChat": "Neuen Chat starten",
   "noResults": "Keine Ergebnisse",
   "noFollowsYet": "Noch keine Follows",
+  "searchByNameOrNpub": "Name oder npub1...",
   "developerSettingsTitle": "Entwicklereinstellungen",
   "publishNewKeyPackage": "Neues Schlüsselpaket veröffentlichen",
   "refreshKeyPackages": "Schlüsselpakete aktualisieren",
