--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -206,5 +206,9 @@
   "carouselDecentralizedTitle": "Dezentralisiert und genehmigungsfrei",
   "carouselDecentralizedDescription": "Keine zentrale Instanz kontrolliert deine Kommunikation – keine Genehmigungen nötig, keine Zensur möglich.",
   "learnMore": "Mehr erfahren",
-  "backToSignUp": "Zurück zur Registrierung"
+  "backToSignUp": "Zurück zur Registrierung",
+  "deleteAllData": "Alle Daten löschen",
+  "deleteAllDataConfirmation": "Alle Daten löschen?",
+  "deleteAllDataWarning": "Dies wird alle deine Chats, Nachrichten und Einstellungen von diesem Gerät dauerhaft löschen. Diese Aktion kann nicht rückgängig gemacht werden.",
+  "deleteAllDataError": "Fehler beim Löschen aller Daten. Bitte versuche es erneut."
 }
