--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -206,5 +206,9 @@
   "carouselDecentralizedTitle": "Децентрализованный и без разрешений",
   "carouselDecentralizedDescription": "Никакая центральная власть не контролирует вашу коммуникацию – разрешения не нужны, цензура невозможна.",
   "learnMore": "Узнать больше",
-  "backToSignUp": "Вернуться к регистрации"
+  "backToSignUp": "Вернуться к регистрации",
+  "deleteAllData": "Удалить все данные",
+  "deleteAllDataConfirmation": "Удалить все данные?",
+  "deleteAllDataWarning": "Это действие безвозвратно удалит все ваши чаты, сообщения и настройки с этого устройства. Отменить невозможно.",
+  "deleteAllDataError": "Не удалось удалить все данные. Пожалуйста, попробуйте снова."
 }
