feat: add welcome notice translations

--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -87,6 +87,10 @@
   "publicKeyCopyError": "Açık anahtar kopyalanamadı. Lütfen tekrar deneyin.",
   "noChatsYet": "Henüz sohbet yok",
   "startConversation": "Bir sohbet başlatın",
+  "welcomeNoticeTitle": "Profiliniz hazır",
+  "welcomeNoticeDescription": "Arkadaşlarınızı bulmak için {findPeople}'a dokunun. Tanıdığınız kişilerle bağlantı kurmak için {shareProfile} veya sohbet artı simgesini kullanarak {startNewChat}.",
+  "findPeople": "Kişi bul",
+  "startNewChat": "yeni bir sohbet başlatın",
   "noMessagesYet": "Henüz mesaj yok",
   "messagePlaceholder": "Mesaj",
   "failedToSendMessage": "Mesaj gönderilemedi. Lütfen tekrar deneyin.",
