--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -445,6 +445,31 @@
     "description": "Empty state subtitle for chat list"
   },
 
+  "welcomeNoticeTitle": "Your profile is ready",
+  "@welcomeNoticeTitle": {
+    "description": "Title for welcome notice shown on empty chat list after signup"
+  },
+
+  "welcomeNoticeDescription": "Tap {findPeople} to find your friends. {shareProfile} to connect with people you know, or {startNewChat} using the chat plus icon.",
+  "@welcomeNoticeDescription": {
+    "description": "Description for welcome notice shown on empty chat list",
+    "placeholders": {
+      "findPeople": { "type": "String" },
+      "shareProfile": { "type": "String" },
+      "startNewChat": { "type": "String" }
+    }
+  },
+
+  "findPeople": "Find people",
+  "@findPeople": {
+    "description": "Button text to find/search for people"
+  },
+
+  "startNewChat": "start a new chat",
+  "@startNewChat": {
+    "description": "Text for starting a new chat action"
+  },
+
   "noMessagesYet": "No messages yet",
   "@noMessagesYet": {
     "description": "Empty state for chat screen"
