--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -87,6 +87,10 @@
   "publicKeyCopyError": "Error al copiar la llave pública. Por favor, inténtalo de nuevo.",
   "noChatsYet": "Aún no hay chats",
   "startConversation": "Inicia una conversación",
+  "welcomeNoticeTitle": "Tu perfil está listo",
+  "welcomeNoticeDescription": "Toca {findPeople} para encontrar a tus amigos. {shareProfile} para conectar con gente que conoces, o {startNewChat} usando el icono de chat.",
+  "findPeople": "Buscar personas",
+  "startNewChat": "inicia un nuevo chat",
   "noMessagesYet": "Aún no hay mensajes",
   "messagePlaceholder": "Mensaje",
   "failedToSendMessage": "Error al enviar el mensaje. Por favor, inténtalo de nuevo.",
