--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -87,6 +87,10 @@
   "publicKeyCopyError": "Не удалось скопировать публичный ключ. Попробуйте снова.",
   "noChatsYet": "Пока нет чатов",
   "startConversation": "Начните разговор",
+  "welcomeNoticeTitle": "Ваш профиль готов",
+  "welcomeNoticeDescription": "Нажмите {findPeople}, чтобы найти друзей. {shareProfile}, чтобы связаться со знакомыми, или {startNewChat}, используя иконку чата.",
+  "findPeople": "Найти людей",
+  "startNewChat": "начните новый чат",
   "noMessagesYet": "Пока нет сообщений",
   "messagePlaceholder": "Сообщение",
   "failedToSendMessage": "Не удалось отправить сообщение. Попробуйте снова.",
