--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -215,5 +215,6 @@
   "deleteAllData": "Eliminar Todos los Datos",
   "deleteAllDataConfirmation": "¿Eliminar todos los datos?",
   "deleteAllDataWarning": "Esto eliminará permanentemente todos tus chats, mensajes y configuraciones de este dispositivo. Esta acción no se puede deshacer.",
-  "deleteAllDataError": "No se pudieron eliminar todos los datos. Por favor, inténtalo de nuevo."
+  "deleteAllDataError": "No se pudieron eliminar todos los datos. Por favor, inténtalo de nuevo.",
+  "retry": "Reintentar"
 }
