feat(login): improve Amber login UX and fix disabled button opacity
Rename "Login with Signer" to "Login with Amber" for clarity across
all locales. Disable the nsec login button when the field is empty
instead of keeping it always enabled. The Amber button is now always
outline style rather than swapping primary/outline based on input state.

Fix disabled button rendering to match Figma: apply 0.25 opacity to
the entire button container instead of individual color channels. The
previous per-color alpha approach made text nearly invisible in light
mode. This affects all button types (primary, outline, ghost, overlay,
destructive).

Add `just run` convenience command for running with flavor.

Closes #191

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -181,7 +181,7 @@
   "monthOctShort": "Okt",
   "monthNovShort": "Nov",
   "monthDecShort": "Dez",
-  "loginWithSigner": "Mit Signer anmelden",
+  "loginWithAmber": "Mit Amber anmelden",
   "you": "Du",
   "search": "Suche",
   "filterChats": "Chats",
