--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -181,7 +181,7 @@
   "monthOctShort": "Eki",
   "monthNovShort": "Kas",
   "monthDecShort": "Ara",
-  "loginWithSigner": "Signer ile giriş yap",
+  "loginWithAmber": "Amber ile giriş yap",
   "signerConnectionError": "Signer'a bağlanılamadı. Lütfen tekrar deneyin.",
   "you": "Sen",
   "search": "Ara",
