feat(chat-list): add welcome notice for empty chat list
Show a dismissible welcome notice with Find People and Share Profile
actions when the chat list is empty after signup. Display a tagline
slogan behind the notice using theme typography. Reset the notice
when switching accounts.

Fix duplicate startNewChat ARB key by renaming the inline placeholder
to startANewChat across all locale files. Fix empty state guard in
WnChatList to not trigger during active search.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -450,13 +450,13 @@
     "description": "Title for welcome notice shown on empty chat list after signup"
   },
 
-  "welcomeNoticeDescription": "Tap {findPeople} to find your friends. {shareProfile} to connect with people you know, or {startNewChat} using the chat plus icon.",
+  "welcomeNoticeDescription": "Tap {findPeople} to find your friends. {shareProfile} to connect with people you know, or {startANewChat} using the chat plus icon.",
   "@welcomeNoticeDescription": {
     "description": "Description for welcome notice shown on empty chat list",
     "placeholders": {
       "findPeople": { "type": "String" },
       "shareProfile": { "type": "String" },
-      "startNewChat": { "type": "String" }
+      "startANewChat": { "type": "String" }
     }
   },
 
@@ -465,8 +465,8 @@
     "description": "Button text to find/search for people"
   },
 
-  "startNewChat": "start a new chat",
-  "@startNewChat": {
+  "startANewChat": "start a new chat",
+  "@startANewChat": {
     "description": "Text for starting a new chat action"
   },
 
