--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -88,9 +88,9 @@
   "noChatsYet": "Ainda não há conversas",
   "startConversation": "Inicie uma conversa",
   "welcomeNoticeTitle": "Seu perfil está pronto",
-  "welcomeNoticeDescription": "Toque em {findPeople} para encontrar seus amigos. {shareProfile} para se conectar com pessoas que você conhece, ou {startNewChat} usando o ícone de chat.",
+  "welcomeNoticeDescription": "Toque em {findPeople} para encontrar seus amigos. {shareProfile} para se conectar com pessoas que você conhece, ou {startANewChat} usando o ícone de chat.",
   "findPeople": "Encontrar pessoas",
-  "startNewChat": "inicie uma nova conversa",
+  "startANewChat": "inicie uma nova conversa",
   "noMessagesYet": "Ainda não há mensagens",
   "messagePlaceholder": "Mensagem",
   "failedToSendMessage": "Falha ao enviar mensagem. Por favor, tente novamente.",
