--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -88,9 +88,9 @@
   "noChatsYet": "Пока нет чатов",
   "startConversation": "Начните разговор",
   "welcomeNoticeTitle": "Ваш профиль готов",
-  "welcomeNoticeDescription": "Нажмите {findPeople}, чтобы найти друзей. {shareProfile}, чтобы связаться со знакомыми, или {startNewChat}, используя иконку чата.",
+  "welcomeNoticeDescription": "Нажмите {findPeople}, чтобы найти друзей. {shareProfile}, чтобы связаться со знакомыми, или {startANewChat}, используя иконку чата.",
   "findPeople": "Найти людей",
-  "startNewChat": "начните новый чат",
+  "startANewChat": "начните новый чат",
   "noMessagesYet": "Пока нет сообщений",
   "messagePlaceholder": "Сообщение",
   "failedToSendMessage": "Не удалось отправить сообщение. Попробуйте снова.",
