--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -88,9 +88,9 @@
   "noChatsYet": "Henüz sohbet yok",
   "startConversation": "Bir sohbet başlatın",
   "welcomeNoticeTitle": "Profiliniz hazır",
-  "welcomeNoticeDescription": "Arkadaşlarınızı bulmak için {findPeople}'a dokunun. Tanıdığınız kişilerle bağlantı kurmak için {shareProfile} veya sohbet artı simgesini kullanarak {startNewChat}.",
+  "welcomeNoticeDescription": "Arkadaşlarınızı bulmak için {findPeople}'a dokunun. Tanıdığınız kişilerle bağlantı kurmak için {shareProfile} veya sohbet artı simgesini kullanarak {startANewChat}.",
   "findPeople": "Kişi bul",
-  "startNewChat": "yeni bir sohbet başlatın",
+  "startANewChat": "yeni bir sohbet başlatın",
   "noMessagesYet": "Henüz mesaj yok",
   "messagePlaceholder": "Mesaj",
   "failedToSendMessage": "Mesaj gönderilemedi. Lütfen tekrar deneyin.",
