--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -88,9 +88,9 @@
   "noChatsYet": "Noch keine Chats",
   "startConversation": "Starte ein Gespräch",
   "welcomeNoticeTitle": "Dein Profil ist bereit",
-  "welcomeNoticeDescription": "Tippe auf {findPeople}, um deine Freunde zu finden. {shareProfile}, um dich mit Bekannten zu verbinden, oder {startNewChat} über das Chat-Plus-Symbol.",
+  "welcomeNoticeDescription": "Tippe auf {findPeople}, um deine Freunde zu finden. {shareProfile}, um dich mit Bekannten zu verbinden, oder {startANewChat} über das Chat-Plus-Symbol.",
   "findPeople": "Personen finden",
-  "startNewChat": "starte einen neuen Chat",
+  "startANewChat": "starte einen neuen Chat",
   "noMessagesYet": "Noch keine Nachrichten",
   "messagePlaceholder": "Nachricht",
   "failedToSendMessage": "Nachricht konnte nicht gesendet werden. Bitte erneut versuchen.",
