--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -88,9 +88,9 @@
   "noChatsYet": "Ancora nessuna chat",
   "startConversation": "Inizia una conversazione",
   "welcomeNoticeTitle": "Il tuo profilo è pronto",
-  "welcomeNoticeDescription": "Tocca {findPeople} per trovare i tuoi amici. {shareProfile} per connetterti con persone che conosci, o {startNewChat} usando l'icona chat.",
+  "welcomeNoticeDescription": "Tocca {findPeople} per trovare i tuoi amici. {shareProfile} per connetterti con persone che conosci, o {startANewChat} usando l'icona chat.",
   "findPeople": "Trova persone",
-  "startNewChat": "inizia una nuova chat",
+  "startANewChat": "inizia una nuova chat",
   "noMessagesYet": "Ancora nessun messaggio",
   "messagePlaceholder": "Messaggio",
   "failedToSendMessage": "Invio del messaggio fallito. Riprova.",
