Feat/chat list no chats notice (#242)
* feat: add welcome notice translations

* feat: signup screen redirect to chat list and remove onboarding screen

* feat(chat-list): add welcome notice for empty chat list

Show a dismissible welcome notice with Find People and Share Profile
actions when the chat list is empty after signup. Display a tagline
slogan behind the notice using theme typography. Reset the notice
when switching accounts.

Fix duplicate startNewChat ARB key by renaming the inline placeholder
to startANewChat across all locale files. Fix empty state guard in
WnChatList to not trigger during active search.

* fix(chat-list): split long slogan line and guard onDismiss with context.mounted

---------

Co-authored-by: Jeff Gardner <202880+erskingardner@users.noreply.github.com>

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -87,6 +87,10 @@
   "publicKeyCopyError": "Öffentlicher Schlüssel konnte nicht kopiert werden. Bitte erneut versuchen.",
   "noChatsYet": "Noch keine Chats",
   "startConversation": "Starte ein Gespräch",
+  "welcomeNoticeTitle": "Dein Profil ist bereit",
+  "welcomeNoticeDescription": "Tippe auf {findPeople}, um deine Freunde zu finden. {shareProfile}, um dich mit Bekannten zu verbinden, oder {startANewChat} über das Chat-Plus-Symbol.",
+  "findPeople": "Personen finden",
+  "startANewChat": "starte einen neuen Chat",
   "noMessagesYet": "Noch keine Nachrichten",
   "messagePlaceholder": "Nachricht",
   "failedToSendMessage": "Nachricht konnte nicht gesendet werden. Bitte erneut versuchen.",
