--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -87,6 +87,10 @@
   "publicKeyCopyError": "Falha ao copiar a chave pública. Por favor, tente novamente.",
   "noChatsYet": "Ainda não há conversas",
   "startConversation": "Inicie uma conversa",
+  "welcomeNoticeTitle": "Seu perfil está pronto",
+  "welcomeNoticeDescription": "Toque em {findPeople} para encontrar seus amigos. {shareProfile} para se conectar com pessoas que você conhece, ou {startANewChat} usando o ícone de chat.",
+  "findPeople": "Encontrar pessoas",
+  "startANewChat": "inicie uma nova conversa",
   "noMessagesYet": "Ainda não há mensagens",
   "messagePlaceholder": "Mensagem",
   "failedToSendMessage": "Falha ao enviar mensagem. Por favor, tente novamente.",
