--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -87,6 +87,10 @@
   "publicKeyCopyError": "Échec de la copie de la clé publique. Veuillez réessayer.",
   "noChatsYet": "Pas encore de discussions",
   "startConversation": "Démarrer une conversation",
+  "welcomeNoticeTitle": "Votre profil est prêt",
+  "welcomeNoticeDescription": "Appuyez sur {findPeople} pour trouver vos amis. {shareProfile} pour vous connecter avec des gens que vous connaissez, ou {startANewChat} avec l'icône de chat.",
+  "findPeople": "Trouver des personnes",
+  "startANewChat": "démarrez une nouvelle discussion",
   "noMessagesYet": "Pas encore de messages",
   "messagePlaceholder": "Message",
   "failedToSendMessage": "Échec de l'envoi du message. Veuillez réessayer.",
