feat(settings): add Privacy & security screen, rename App Settings to Appearance, update scroll edge effects
- Create Privacy & security screen with delete-all-data functionality (closes #247)
- Rename App Settings to Appearance, remove delete-all-data from it (closes #248)
- Add separator and secondary menu items for Donate/Developer settings
- Update scroll edge effect heights (slate: 40px, canvas: 196px) with smoother 3-stop gradient
- Add localization for all new strings across 8 languages
- Full test coverage for new and updated screens

--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -26,11 +26,16 @@
   "editProfile": "Editar perfil",
   "profileKeys": "Llaves del perfil",
   "networkRelays": "Relés de red",
-  "appSettings": "Ajustes de la app",
+  "appearance": "Apariencia",
+  "privacySecurity": "Privacidad y seguridad",
   "donateToWhiteNoise": "Donar a White Noise",
   "developerSettings": "Ajustes de desarrollador",
   "signOut": "Cerrar sesión",
-  "appSettingsTitle": "Ajustes de la App",
+  "appearanceTitle": "Apariencia",
+  "privacySecurityTitle": "Privacidad y seguridad",
+  "deleteAllAppData": "Eliminar todos los datos de la app",
+  "deleteAppData": "Eliminar datos de la app",
+  "deleteAllAppDataDescription": "Borrar todos los perfiles, claves, chats y archivos locales de este dispositivo.",
   "theme": "Tema",
   "themeSystem": "Sistema",
   "themeLight": "Claro",
