--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -26,11 +26,16 @@
   "editProfile": "Modifier le profil",
   "profileKeys": "Clés du profil",
   "networkRelays": "Relais réseau",
-  "appSettings": "Paramètres de l'app",
+  "appearance": "Apparence",
+  "privacySecurity": "Confidentialité et sécurité",
   "donateToWhiteNoise": "Faire un don à White Noise",
   "developerSettings": "Paramètres développeur",
   "signOut": "Déconnexion",
-  "appSettingsTitle": "Paramètres de l'App",
+  "appearanceTitle": "Apparence",
+  "privacySecurityTitle": "Confidentialité et sécurité",
+  "deleteAllAppData": "Supprimer toutes les données de l'app",
+  "deleteAppData": "Supprimer les données de l'app",
+  "deleteAllAppDataDescription": "Effacer tous les profils, clés, chats et fichiers locaux de cet appareil.",
   "theme": "Thème",
   "themeSystem": "Système",
   "themeLight": "Clair",
