--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -26,11 +26,16 @@
   "editProfile": "Editar perfil",
   "profileKeys": "Chaves do perfil",
   "networkRelays": "Relays de rede",
-  "appSettings": "Configurações do app",
+  "appearance": "Aparência",
+  "privacySecurity": "Privacidade e segurança",
   "donateToWhiteNoise": "Doar para o White Noise",
   "developerSettings": "Configurações de desenvolvedor",
   "signOut": "Sair",
-  "appSettingsTitle": "Configurações do App",
+  "appearanceTitle": "Aparência",
+  "privacySecurityTitle": "Privacidade e segurança",
+  "deleteAllAppData": "Excluir todos os dados do app",
+  "deleteAppData": "Excluir dados do app",
+  "deleteAllAppDataDescription": "Apagar todos os perfis, chaves, chats e arquivos locais deste dispositivo.",
   "theme": "Tema",
   "themeSystem": "Sistema",
   "themeLight": "Claro",
