--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -26,11 +26,16 @@
   "editProfile": "Редактировать профиль",
   "profileKeys": "Ключи профиля",
   "networkRelays": "Сетевые реле",
-  "appSettings": "Настройки приложения",
+  "appearance": "Внешний вид",
+  "privacySecurity": "Конфиденциальность и безопасность",
   "donateToWhiteNoise": "Пожертвовать White Noise",
   "developerSettings": "Настройки разработчика",
   "signOut": "Выйти",
-  "appSettingsTitle": "Настройки Приложения",
+  "appearanceTitle": "Внешний вид",
+  "privacySecurityTitle": "Конфиденциальность и безопасность",
+  "deleteAllAppData": "Удалить все данные приложения",
+  "deleteAppData": "Удалить данные приложения",
+  "deleteAllAppDataDescription": "Удалить все профили, ключи, чаты и локальные файлы с этого устройства.",
   "theme": "Тема",
   "themeSystem": "Системная",
   "themeLight": "Светлая",
