--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -26,11 +26,16 @@
   "editProfile": "Profil bearbeiten",
   "profileKeys": "Profilschlüssel",
   "networkRelays": "Netzwerk-Relays",
-  "appSettings": "App-Einstellungen",
+  "appearance": "Erscheinungsbild",
+  "privacySecurity": "Datenschutz & Sicherheit",
   "donateToWhiteNoise": "An White Noise spenden",
   "developerSettings": "Entwicklereinstellungen",
   "signOut": "Abmelden",
-  "appSettingsTitle": "App-Einstellungen",
+  "appearanceTitle": "Erscheinungsbild",
+  "privacySecurityTitle": "Datenschutz & Sicherheit",
+  "deleteAllAppData": "Alle App-Daten löschen",
+  "deleteAppData": "App-Daten löschen",
+  "deleteAllAppDataDescription": "Alle Profile, Schlüssel, Chats und lokalen Dateien von diesem Gerät löschen.",
   "theme": "Design",
   "themeSystem": "System",
   "themeLight": "Hell",
