fix: title-case deleteAllAppData l10n keys, extract MockAuthNotifier to shared helper

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -33,7 +33,7 @@
   "signOut": "Abmelden",
   "appearanceTitle": "Erscheinungsbild",
   "privacySecurityTitle": "Datenschutz & Sicherheit",
-  "deleteAllAppData": "Alle App-Daten löschen",
+  "deleteAllAppData": "Alle App-Daten Löschen",
   "deleteAppData": "App-Daten löschen",
   "deleteAllAppDataDescription": "Alle Profile, Schlüssel, Chats und lokalen Dateien von diesem Gerät löschen.",
   "theme": "Design",
