--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -33,7 +33,7 @@
   "signOut": "Esci",
   "appearanceTitle": "Aspetto",
   "privacySecurityTitle": "Privacy e sicurezza",
-  "deleteAllAppData": "Elimina tutti i dati dell'app",
+  "deleteAllAppData": "Elimina Tutti i Dati dell'App",
   "deleteAppData": "Elimina dati dell'app",
   "deleteAllAppDataDescription": "Cancella tutti i profili, le chiavi, le chat e i file locali da questo dispositivo.",
   "theme": "Tema",
