--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -33,7 +33,7 @@
   "signOut": "Sair",
   "appearanceTitle": "Aparência",
   "privacySecurityTitle": "Privacidade e segurança",
-  "deleteAllAppData": "Excluir todos os dados do app",
+  "deleteAllAppData": "Excluir Todos os Dados do App",
   "deleteAppData": "Excluir dados do app",
   "deleteAllAppDataDescription": "Apagar todos os perfis, chaves, chats e arquivos locais deste dispositivo.",
   "theme": "Tema",
