--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -33,7 +33,7 @@
   "signOut": "Cerrar sesión",
   "appearanceTitle": "Apariencia",
   "privacySecurityTitle": "Privacidad y seguridad",
-  "deleteAllAppData": "Eliminar todos los datos de la app",
+  "deleteAllAppData": "Eliminar Todos los Datos de la App",
   "deleteAppData": "Eliminar datos de la app",
   "deleteAllAppDataDescription": "Borrar todos los perfiles, claves, chats y archivos locales de este dispositivo.",
   "theme": "Tema",
