--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -33,7 +33,7 @@
   "signOut": "Déconnexion",
   "appearanceTitle": "Apparence",
   "privacySecurityTitle": "Confidentialité et sécurité",
-  "deleteAllAppData": "Supprimer toutes les données de l'app",
+  "deleteAllAppData": "Supprimer Toutes les Données de l'App",
   "deleteAppData": "Supprimer les données de l'app",
   "deleteAllAppDataDescription": "Effacer tous les profils, clés, chats et fichiers locaux de cet appareil.",
   "theme": "Thème",
