--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -33,7 +33,7 @@
   "signOut": "Çıkış yap",
   "appearanceTitle": "Görünüm",
   "privacySecurityTitle": "Gizlilik ve güvenlik",
-  "deleteAllAppData": "Tüm uygulama verilerini sil",
+  "deleteAllAppData": "Tüm Uygulama Verilerini Sil",
   "deleteAppData": "Uygulama verilerini sil",
   "deleteAllAppDataDescription": "Bu cihazdaki tüm profilleri, anahtarları, sohbetleri ve yerel dosyaları sil.",
   "theme": "Tema",
