--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -33,7 +33,7 @@
   "signOut": "Abmelden",
   "appearanceTitle": "Erscheinungsbild",
   "privacySecurityTitle": "Datenschutz & Sicherheit",
-  "deleteAllAppData": "Alle App-Daten Löschen",
+  "deleteAllAppData": "Alle App-Daten löschen",
   "deleteAppData": "App-Daten löschen",
   "deleteAllAppDataDescription": "Alle Profile, Schlüssel, Chats und lokalen Dateien von diesem Gerät löschen.",
   "theme": "Design",
