fix(privacy): match Figma design for confirmation dialog and section labels
- WnConfirmationSlate: position at top of screen (not bottom), stack buttons vertically with 8px gap
- Privacy screen: section label uses semiBold16 with secondary color (grey) per design
- Confirmation dialog: use action-specific title/message/button text instead of generic
- Add deleteAllAppDataConfirmation and deleteAllAppDataWarning l10n keys across all 8 languages

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -36,6 +36,8 @@
   "deleteAllAppData": "Alle App-Daten löschen",
   "deleteAppData": "App-Daten löschen",
   "deleteAllAppDataDescription": "Alle Profile, Schlüssel, Chats und lokalen Dateien von diesem Gerät löschen.",
+  "deleteAllAppDataConfirmation": "Alle App-Daten löschen?",
+  "deleteAllAppDataWarning": "Hiermit werden alle Profile, Schlüssel, Chats und lokalen Dateien von diesem Gerät gelöscht. Dies kann nicht rückgängig gemacht werden.",
   "theme": "Design",
   "themeSystem": "System",
   "themeLight": "Hell",
