--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -36,6 +36,8 @@
   "deleteAllAppData": "Удалить все данные приложения",
   "deleteAppData": "Удалить данные приложения",
   "deleteAllAppDataDescription": "Удалить все профили, ключи, чаты и локальные файлы с этого устройства.",
+  "deleteAllAppDataConfirmation": "Удалить все данные приложения?",
+  "deleteAllAppDataWarning": "Будут удалены все профили, ключи, чаты и локальные файлы с этого устройства. Это действие нельзя отменить.",
   "theme": "Тема",
   "themeSystem": "Системная",
   "themeLight": "Светлая",
