--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -36,6 +36,8 @@
   "deleteAllAppData": "Elimina Tutti i Dati dell'App",
   "deleteAppData": "Elimina dati dell'app",
   "deleteAllAppDataDescription": "Cancella tutti i profili, le chiavi, le chat e i file locali da questo dispositivo.",
+  "deleteAllAppDataConfirmation": "Eliminare tutti i dati dell'app?",
+  "deleteAllAppDataWarning": "Verranno cancellati tutti i profili, le chiavi, le chat e i file locali da questo dispositivo. Questa azione non può essere annullata.",
   "theme": "Tema",
   "themeSystem": "Sistema",
   "themeLight": "Chiaro",
