--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -36,6 +36,8 @@
   "deleteAllAppData": "Excluir Todos os Dados do App",
   "deleteAppData": "Excluir dados do app",
   "deleteAllAppDataDescription": "Apagar todos os perfis, chaves, chats e arquivos locais deste dispositivo.",
+  "deleteAllAppDataConfirmation": "Excluir todos os dados do app?",
+  "deleteAllAppDataWarning": "Isso apagará todos os perfis, chaves, chats e arquivos locais deste dispositivo. Esta ação não pode ser desfeita.",
   "theme": "Tema",
   "themeSystem": "Sistema",
   "themeLight": "Claro",
