feat(settings): Privacy & security screen, rename to Appearance, update scroll effects (#254)
* feat(settings): add Privacy & security screen, rename App Settings to Appearance, update scroll edge effects

- Create Privacy & security screen with delete-all-data functionality (closes #247)
- Rename App Settings to Appearance, remove delete-all-data from it (closes #248)
- Add separator and secondary menu items for Donate/Developer settings
- Update scroll edge effect heights (slate: 40px, canvas: 196px) with smoother 3-stop gradient
- Add localization for all new strings across 8 languages
- Full test coverage for new and updated screens

* fix: title-case deleteAllAppData l10n keys, extract MockAuthNotifier to shared helper

* fix(l10n): use lowercase verb in German deleteAllAppData key

* fix(privacy): match Figma design for confirmation dialog and section labels

- WnConfirmationSlate: position at top of screen (not bottom), stack buttons vertically with 8px gap
- Privacy screen: section label uses semiBold16 with secondary color (grey) per design
- Confirmation dialog: use action-specific title/message/button text instead of generic
- Add deleteAllAppDataConfirmation and deleteAllAppDataWarning l10n keys across all 8 languages

* fix(confirmation): use back button instead of close X in confirmation slate

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -26,11 +26,18 @@
   "editProfile": "Profil bearbeiten",
   "profileKeys": "Profilschlüssel",
   "networkRelays": "Netzwerk-Relays",
-  "appSettings": "App-Einstellungen",
+  "appearance": "Erscheinungsbild",
+  "privacySecurity": "Datenschutz & Sicherheit",
   "donateToWhiteNoise": "An White Noise spenden",
   "developerSettings": "Entwicklereinstellungen",
   "signOut": "Abmelden",
-  "appSettingsTitle": "App-Einstellungen",
+  "appearanceTitle": "Erscheinungsbild",
+  "privacySecurityTitle": "Datenschutz & Sicherheit",
+  "deleteAllAppData": "Alle App-Daten löschen",
+  "deleteAppData": "App-Daten löschen",
+  "deleteAllAppDataDescription": "Alle Profile, Schlüssel, Chats und lokalen Dateien von diesem Gerät löschen.",
+  "deleteAllAppDataConfirmation": "Alle App-Daten löschen?",
+  "deleteAllAppDataWarning": "Hiermit werden alle Profile, Schlüssel, Chats und lokalen Dateien von diesem Gerät gelöscht. Dies kann nicht rückgängig gemacht werden.",
   "theme": "Design",
   "themeSystem": "System",
   "themeLight": "Hell",
