--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -26,11 +26,18 @@
   "editProfile": "Profili düzenle",
   "profileKeys": "Profil anahtarları",
   "networkRelays": "Ağ röleleri",
-  "appSettings": "Uygulama ayarları",
+  "appearance": "Görünüm",
+  "privacySecurity": "Gizlilik ve güvenlik",
   "donateToWhiteNoise": "White Noise'a bağış yap",
   "developerSettings": "Geliştirici ayarları",
   "signOut": "Çıkış yap",
-  "appSettingsTitle": "Uygulama Ayarları",
+  "appearanceTitle": "Görünüm",
+  "privacySecurityTitle": "Gizlilik ve güvenlik",
+  "deleteAllAppData": "Tüm Uygulama Verilerini Sil",
+  "deleteAppData": "Uygulama verilerini sil",
+  "deleteAllAppDataDescription": "Bu cihazdaki tüm profilleri, anahtarları, sohbetleri ve yerel dosyaları sil.",
+  "deleteAllAppDataConfirmation": "Tüm uygulama verileri silinsin mi?",
+  "deleteAllAppDataWarning": "Bu cihazdaki tüm profiller, anahtarlar, sohbetler ve yerel dosyalar silinecektir. Bu işlem geri alınamaz.",
   "theme": "Tema",
   "themeSystem": "Sistem",
   "themeLight": "Açık",
