--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -26,11 +26,18 @@
   "editProfile": "Editar perfil",
   "profileKeys": "Llaves del perfil",
   "networkRelays": "Relés de red",
-  "appSettings": "Ajustes de la app",
+  "appearance": "Apariencia",
+  "privacySecurity": "Privacidad y seguridad",
   "donateToWhiteNoise": "Donar a White Noise",
   "developerSettings": "Ajustes de desarrollador",
   "signOut": "Cerrar sesión",
-  "appSettingsTitle": "Ajustes de la App",
+  "appearanceTitle": "Apariencia",
+  "privacySecurityTitle": "Privacidad y seguridad",
+  "deleteAllAppData": "Eliminar Todos los Datos de la App",
+  "deleteAppData": "Eliminar datos de la app",
+  "deleteAllAppDataDescription": "Borrar todos los perfiles, claves, chats y archivos locales de este dispositivo.",
+  "deleteAllAppDataConfirmation": "¿Eliminar todos los datos de la app?",
+  "deleteAllAppDataWarning": "Esto eliminará todos los perfiles, claves, chats y archivos locales de este dispositivo. Esta acción no se puede deshacer.",
   "theme": "Tema",
   "themeSystem": "Sistema",
   "themeLight": "Claro",
