--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -26,11 +26,18 @@
   "editProfile": "Modifica profilo",
   "profileKeys": "Chiavi del profilo",
   "networkRelays": "Relay di rete",
-  "appSettings": "Impostazioni app",
+  "appearance": "Aspetto",
+  "privacySecurity": "Privacy e sicurezza",
   "donateToWhiteNoise": "Dona a White Noise",
   "developerSettings": "Impostazioni sviluppatore",
   "signOut": "Esci",
-  "appSettingsTitle": "Impostazioni App",
+  "appearanceTitle": "Aspetto",
+  "privacySecurityTitle": "Privacy e sicurezza",
+  "deleteAllAppData": "Elimina Tutti i Dati dell'App",
+  "deleteAppData": "Elimina dati dell'app",
+  "deleteAllAppDataDescription": "Cancella tutti i profili, le chiavi, le chat e i file locali da questo dispositivo.",
+  "deleteAllAppDataConfirmation": "Eliminare tutti i dati dell'app?",
+  "deleteAllAppDataWarning": "Verranno cancellati tutti i profili, le chiavi, le chat e i file locali da questo dispositivo. Questa azione non può essere annullata.",
   "theme": "Tema",
   "themeSystem": "Sistema",
   "themeLight": "Chiaro",
